Integrating user system into current system. Some kind of error when accessing display profile.

--- a/login/login.htm
+++ b/login/login.htm
@@ -2,13 +2,14 @@
 <div class='login-caption'>
     Login:
 </div><div>
-    <input type='text' id='login_input' />
+    <input type='text' id='login_input' class='login-input' />
 </div><div class='login-caption'>
     Password:
 </div><div>
-    <input type='password' id='password_input' />
+    <input type='password' id='password_input' class='login-input' />
 </div><div id='login_status'>
 
-</div><div style='width:327px;text-align:right;'>
+</div><div style='width:225px;text-align:right;'>
+    <input type='button' id='hide_login' value='Cancel' />
     <input id='login' type='button' value='Login'/>
 </div>
